--- a/스프링 MVC 2편 - 백엔드 웹 개발 활용 기술/validation-start/src/main/resources/messages.properties
+++ b/스프링 MVC 2편 - 백엔드 웹 개발 활용 기술/validation-start/src/main/resources/messages.properties
@@ -2,8 +2,8 @@ hello=안녕
 hello.name=안녕 {0}
 
 label.item=상품
-label.item.id=상품 ID
-label.item.itemName=상품명
+label.item.id=상품 상품명
+label.item.itemName=이름
 label.item.price=가격
 label.item.quantity=수량
 
